# QuantumWalks

./: CMakeLists.txt
versions/classical_persistant_random_walk/: PersistantRandomWalk.cpp  PersistantRandomWalk.h  PersistantUltraWalk.cpp  PersistantUltraWalk.h  main.cpp
versions/first_try/: main.cpp  quantumwalk.cpp  quantumwalk.h
versions/random_medium_infinite_quantum_walk/: QuantumWalk.cpp  QuantumWalk.h  main.cpp
versions/random_medium_semi_infinite_quantum_walk/: QuantumWalk.h  main.cpp
versions/random_medium_semi_inifinite_quantum_walk/: QuantumWalk.cpp
versions/ultra_quantum_walk/: UltraQuantumWalk.cpp  UltraQuantumWalk.h  main.cpp
